--- a/converter.html
+++ b/converter.html
@@ -6,11 +6,11 @@
 	</head>
 
 <body>
-	<input type="text" id="inputNum">
+	<input type="text" id="num">
 	<p/>
-	<input id="button" type="button" onclick="convertBase('inputNum','output')" value="Convert">
+	<input id="button" type="button" onclick="document.write(convert())" value="Convert">
 	<p/>
-	<div id="output"></div>
+	<div id="num"></div>
 </body>
 
 </html>
