--- a/converter.html
+++ b/converter.html
@@ -6,9 +6,9 @@
 	</head>
 
 <body>
-	<input type="text" id="inputNum">
+	<input type="text" id="num">
 	<p/>
-	<input id="button" type="button" onclick="convertBase('inputNum','output')" value="Convert">
+	<input id="button" type="button" onclick="convert()" value="Convert">
 	<p/>
 	<div id="output"></div>
 </body>
