--- a/converter.html
+++ b/converter.html
@@ -8,7 +8,7 @@
 <body>
 	<input type="text" id="num">
 	<p/>
-	<input id="button" type="button" onclick="convert()" value="Convert">
+	<input id="convert" type="button" onclick="convert();" value="Convert">
 	<p/>
 	<div id="output"></div>
 </body>
