--- a/converter.html
+++ b/converter.html
@@ -8,7 +8,9 @@
 <body>
 	<input type="text" id="num">
 	<p/>
-	<input id="convert" type="button" onclick="convert();" value="Convert">
+	<input id="convert" type="button" onclick="binConvert();" value="Convert">
+	<input id="convert" type="button" onclick="decConvert();" value="Convert">
+	<input id="convert" type="button" onclick="hexConvert();" value="Convert">
 	<p/>
 	<div id="output"></div>
 </body>
