--- a/converter.html
+++ b/converter.html
@@ -3,14 +3,17 @@
 
 <head>
 	<script language="javascript" type="text/javascript" src="test.js"></script>
+    <link rel="stylesheet" href="conveter.css">
 	</head>
-
+<h1> Matts Glasses Inc. Converter</h1>
 <body>
 	<input type="text" id="num">
 	<p/>
-	<input id="button" type="button" onclick="convert()" value="Convert">
+	<input id="button" type="button" onclick="convert(num)" value="Binary">
+    	<input id="button" type="button" onclick="convert(num)" value="Decimal">	<input id="button" type="button" onclick="convert(num)" value="Hexadecimal">
 	<p/>
 	<div id="output"></div>
+
 </body>
 
 </html>
