--- a/converter.html
+++ b/converter.html
@@ -9,14 +9,10 @@
 <body>
 	<input type="text" id="num">
 	<p/>
-<<<<<<< HEAD
-	<input id="button" type="button" onclick="convert(num)" value="Binary">
-    	<input id="button" type="button" onclick="convert(num)" value="Decimal">	<input id="button" type="button" onclick="convert(num)" value="Hexadecimal">
-=======
-	<input id="convert" type="button" onclick="binConvert();" value="Convert">
-	<input id="convert" type="button" onclick="decConvert();" value="Convert">
-	<input id="convert" type="button" onclick="hexConvert();" value="Convert">
->>>>>>> BC/master
+
+	<input id="convert" type="button" onclick="binConvert();" value="Binary">
+	<input id="convert" type="button" onclick="decConvert();" value="Decimal">
+	<input id="convert" type="button" onclick="hexConvert();" value="HexaDecimal">
 	<p/>
 	<div id="output"></div>
 
